@@ -3,11 +3,13 @@
 ## Version 4.2.0
 
 * Adding #109 NVENC HEVC support based on FFmpeg
-* Adding NVEenC initial trial for HEVC
+* Adding NVEenC encoder for HEVC
+* Adding #166 More robust queue that is recoverable
 * Adding ability to extract HDR10+ metadata if hdr10plus_parser is detected on path
 * Adding #178 selector for number of autocrop positions throughout video (thanks to bmcassagne)
 * Adding Windows 10 notification for queue complete success
 * Adding #194 fast two pass encoding (thanks to Ugurtan)
+* Fixing #176 Unable to change queue order or delete task from queue since 4.1.0 (thanks to Etz)
 * Fixing #185 need to specify channel layout when downmixing (thanks to Ugurtan)
 * Fixing #187 cleaning up partial download of FFmpeg (thanks to Todd Wilkinson)
 * Fixing #190 add missing chromaloc parameter for x265 (thanks to Etz)
